k8s/base/servers/tavily/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tavily
    component: mcp-server
  name: mcp-tavily
spec:
  ports:
    - name: websocket
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: tavily
  type: ClusterIP
